[metadata]
# replace with your username:
name = csst_dfs_api_cluster
author =CSST DFS Team.
author_email = weishoulin@astrolab.cn
description = CSST DFS Cluster APIs Library.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, astrophysics, cosmology, space, CSST
url = https://github.com/astronomical-data-processing/csst-dfs-api-cluster
project_urls =
    Bug Tracker = https://github.com/astronomical-data-processing/csst-dfs-api-cluster/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
setup_requires = setuptools_scm
